# datafusion-spatial

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: compute.rs  helpers.rs  lib.rs  main.rs  rules.rs
src/udafs/: extent.rs  mod.rs
src/udfs/: as_text.rs  envelope.rs  geometry_type.rs  helpers.rs  mod.rs
src/wkt/: array.rs  scalar.rs
