[package]
name = "datafusion-spatial"
version = "0.1.0"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
edition = "2021"
description = "Spatial extension for DataFusion"
license = "Apache-2.0"
keywords = ["geoparquet", "geoarrow", "datafusion"]


[dependencies]
datafusion = { version = "41.0.0", default-features = false, features = ["parquet"] }
geoarrow = { version = "0.3.0", default-features = false, features = ["geozero"] }
geozero = { version = "0.13.0", default-features = false, features = ["with-wkb"] }
tokio = { version = "1.40.0", features = ["full"] }
