[package]
name = "datafusion-spatial"
version = "0.1.0"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
edition = "2021"
description = "Spatial extension for DataFusion"
license = "Apache-2.0"
keywords = ["geoparquet", "geoarrow", "datafusion"]


[dependencies]
datafusion = { version = "42.0.0", default-features = false, features = ["parquet"] }
geoarrow = { version = "0.4.0-beta.1", default-features = false, features = ["parquet"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[patch.crates-io]
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
# geoarrow = { path = "../geoarrow-rs" }
