[package]
name = "datafusion-spatial"
version = "0.1.0-alpha.1"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
edition = "2021"
description = "Spatial extension for DataFusion"
repository = "https://github.com/b4l/datafusion-spatial"
license = "Apache-2.0"
keywords = ["geoparquet", "geoarrow", "datafusion"]
categories = ["science::geo"]


[dependencies]
datafusion = { version = "42.1.0", default-features = false, features = ["parquet"] }
geo = { version = "0.29.0", default-features = false }
geo-traits = "0.1.1"
geoarrow = { version = "0.4.0-beta.1", default-features = false, features = ["parquet"] }
num-traits = "0.2.19"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }

[patch.crates-io]
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git", rev = "8fda9ab8dc025ef486ace399e5b869d31f178f23" }
# geoarrow = { path = "../geoarrow-rs" }
